<resources>
    <string name="app_name">Do you like dogs?</string>
    <string name="username">Enter your name</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="empty_string"></string>
    <string name="welcome">Welcome View</string>
    <string name="question">Do you love dogs?</string>
    <string name="yes">YES!</string>
    <string name="no">No</string>
</resources>
