<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/welcome_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/go_back_button"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/question_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/welcome_view"
        android:layout_below="@+id/welcome_view"
        android:layout_marginTop="61dp"
        android:text="@string/question" />

    <CheckBox
        android:id="@+id/yes_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/yes"
        android:onClick="yesChecked"/>

    <CheckBox
        android:id="@+id/no_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/yes_check"
        android:layout_below="@+id/yes_check"
        android:layout_marginTop="16dp"
        android:text="@string/no"
        android:onClick="noChecked"/>

    <Button
        android:id="@+id/open_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/welcome_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:onClick="openMap"
        android:text="Open Map" />

    <EditText
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_check"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Longitude" />

    <EditText
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/longitude"
        android:layout_below="@+id/longitude"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Latitude" />


</RelativeLayout>